Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39956

QTextStream does not respect QLocale::OmitGroupSeparator

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.2
    • 4.8.6, 5.3.1
    • Core: Locales (i18n)
    • None
    • Tested with Windows 8.1

    Description

      QTextStream implementation doesn't respect QLocale's QLocale::OmitGroupSeparator. This way QTextStream outputs thounsands separators no matter what locale is in use (expect "C" locale, that's hardcoded).

      There's no way to workaround this without explicitly converting number to string first (I was using QTextStream for exactly that purpose. Now i can't)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            bdemirkir Berk Demirkir
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes